--- a/mednafen/sound/Makefile.am
+++ b/mednafen/sound/Makefile.am
@@ -4,4 +4,4 @@ DEFAULT_INCLUDES = -I$(top_builddir)/include -I$(top_srcdir)/intl -I$(top_buildd
 
 noinst_LIBRARIES	=	libmdfnsound.a
 
-libmdfnsound_a_SOURCES  =       sound.cpp Blip_Buffer.cpp Stereo_Buffer.cpp Fir_Resampler.cpp WAVRecord.cpp
+libmdfnsound_a_SOURCES  =       Blip_Buffer.cpp Stereo_Buffer.cpp Fir_Resampler.cpp WAVRecord.cpp
