--- a/msvc/msvc-2010/msvc-2010.vcxproj
+++ b/msvc/msvc-2010/msvc-2010.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{8631E5F4-307D-47E4-81F7-6C83F1A82BD1}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>mednafenpsxlibretro</RootNamespace>
+    <ProjectName>msvc-2010-psx</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -77,24 +78,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\libretro.cpp" />
-    <ClCompile Include="..\..\mednafen-libretro\cdplay.cpp" />
-    <ClCompile Include="..\..\mednafen-libretro\mednafen-libretro.cpp" />
-    <ClCompile Include="..\..\mednafen-libretro\psx\spu.cpp" />
-    <ClCompile Include="..\..\mednafen-libretro\state.cpp" />
-    <ClCompile Include="..\..\mednafen\cdplay.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
     <ClCompile Include="..\..\mednafen\cdrom\audioreader.cpp" />
     <ClCompile Include="..\..\mednafen\cdrom\CDAccess.cpp" />
     <ClCompile Include="..\..\mednafen\cdrom\CDAccess_Image.cpp" />
-    <ClCompile Include="..\..\mednafen\cdrom\CDAccess_Physical.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
     <ClCompile Include="..\..\mednafen\cdrom\cdromif.cpp" />
     <ClCompile Include="..\..\mednafen\cdrom\CDUtility.cpp" />
-    <ClCompile Include="..\..\mednafen\cdrom\crc32.cpp" />
     <ClCompile Include="..\..\mednafen\cdrom\galois.cpp" />
     <ClCompile Include="..\..\mednafen\cdrom\l-ec.cpp" />
     <ClCompile Include="..\..\mednafen\cdrom\lec.cpp" />
@@ -113,20 +101,61 @@
     <ClCompile Include="..\..\mednafen\math_ops.cpp" />
     <ClCompile Include="..\..\mednafen\md5.cpp" />
     <ClCompile Include="..\..\mednafen\mednafen.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="..\..\mednafen\memory.cpp" />
     <ClCompile Include="..\..\mednafen\mempatcher.cpp" />
-    <ClCompile Include="..\..\mednafen\movie.cpp" />
-    <ClCompile Include="..\..\mednafen\netplay.cpp" />
+    <ClCompile Include="..\..\mednafen\mpcdec\fastmath.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\mpcdec\huffman-bcl.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\mpcdec\huffman.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\mpcdec\mpc_bits_reader.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\mpcdec\mpc_crc32.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\mpcdec\mpc_decoder.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\mpcdec\mpc_demux.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\mpcdec\mpc_reader.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\mpcdec\requant.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\mpcdec\streaminfo.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\mpcdec\synth_filter.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\mpcdec\tags.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
     <ClCompile Include="..\..\mednafen\okiadpcm.cpp" />
-    <ClCompile Include="..\..\mednafen\player.cpp" />
-    <ClCompile Include="..\..\mednafen\PSFLoader.cpp" />
     <ClCompile Include="..\..\mednafen\psx\cdc.cpp" />
     <ClCompile Include="..\..\mednafen\psx\cpu.cpp" />
-    <ClCompile Include="..\..\mednafen\psx\debug.cpp" />
-    <ClCompile Include="..\..\mednafen\psx\dis.cpp" />
     <ClCompile Include="..\..\mednafen\psx\dma.cpp" />
     <ClCompile Include="..\..\mednafen\psx\frontio.cpp" />
     <ClCompile Include="..\..\mednafen\psx\gpu.cpp" />
@@ -141,33 +170,80 @@
     <ClCompile Include="..\..\mednafen\psx\psx.cpp" />
     <ClCompile Include="..\..\mednafen\psx\sio.cpp" />
     <ClCompile Include="..\..\mednafen\psx\spu.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="..\..\mednafen\psx\timer.cpp" />
-    <ClCompile Include="..\..\mednafen\qtrecord.cpp" />
     <ClCompile Include="..\..\mednafen\settings.cpp" />
     <ClCompile Include="..\..\mednafen\sound\Blip_Buffer.cpp" />
-    <ClCompile Include="..\..\mednafen\sound\Fir_Resampler.cpp" />
-    <ClCompile Include="..\..\mednafen\sound\sound.cpp" />
     <ClCompile Include="..\..\mednafen\sound\Stereo_Buffer.cpp" />
-    <ClCompile Include="..\..\mednafen\sound\WAVRecord.cpp" />
     <ClCompile Include="..\..\mednafen\state.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\..\mednafen\string\ConvertUTF.cpp" />
-    <ClCompile Include="..\..\mednafen\string\escape.cpp" />
-    <ClCompile Include="..\..\mednafen\tests.cpp" />
+    <ClCompile Include="..\..\mednafen\tremor\bitwise.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\block.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\codebook.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\floor0.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\floor1.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\framing.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\info.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\mapping0.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\mdct.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\registry.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\res012.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\sharedbook.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\synthesis.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\vorbisfile.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
+    <ClCompile Include="..\..\mednafen\tremor\window.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
     <ClCompile Include="..\..\mednafen\video\Deinterlacer.cpp" />
-    <ClCompile Include="..\..\mednafen\video\font-data.cpp" />
-    <ClCompile Include="..\..\mednafen\video\png.cpp" />
-    <ClCompile Include="..\..\mednafen\video\resize.cpp" />
     <ClCompile Include="..\..\mednafen\video\surface.cpp" />
-    <ClCompile Include="..\..\mednafen\video\tblur.cpp" />
-    <ClCompile Include="..\..\mednafen\video\text.cpp" />
     <ClCompile Include="..\..\mednafen\video\video.cpp" />
     <ClCompile Include="..\..\stubs.cpp" />
+    <ClCompile Include="..\..\stubs_thread.cpp" />
     <ClCompile Include="..\..\thread.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
